# torus-turbo

./: .gitignore  GUIDED_PHYSICS_AUDIT.md  GUIDED_PHYSICS_AUDIT_REPORT.md  HYBRID_PLUS_ARCHITECTURE.md  RULES.md  SPATIAL_ACCELERATION.md  eslint.config.js  index.html  package-lock.json  package.json  research-preset-policy-integrity-audit.json  research-preset-policy-integrity-audit.md  vite.config.js
audit-runner/: adaptive-baseline-matrix.json  adaptive-baseline-matrix.md  adaptive-baseline-trend.json  adaptiveBaselineMatrix.mjs  advanced-physics-experiment.json  advanced-physics-experiment.md  classic-external-validation-evidence-pack.json  classic-external-validation-evidence-pack.md  classic-replication-audit-report.json  classic-replication-audit-report.md  classic-replication-audit.input.json  classic-replication-protocol.contract.v1.json  classicExternalValidationEvidencePack.mjs  classicReplicationAudit.mjs  convergenceTest.mjs  distributed-parity-audit-report.json  distributed-parity-audit-report.md  distributed-parity-policy-integrity-audit.json  distributed-parity-policy-integrity-audit.md  distributed-parity-policy.v1.json  distributed-parity-trend.json  distributed-parity-trend.md  distributed-triad-run-input-audit.json  distributed-triad-run-input-audit.md  distributed-triad-run-input.contract.v1.json  distributed-triad-run-input.json  distributed-validation-contract-audit.json  distributed-validation-contract-audit.md  distributed-validation-parity-audit.json  distributed-validation-parity-audit.runtime.json  distributedParityArtifactBuilder.mjs  distributedParityAudit.mjs  distributedParityPolicyIntegrityAudit.mjs  distributedParityTrendAudit.mjs  distributedTriadInputAudit.mjs  distributedValidationContractAudit.mjs  emergenceAudit.mjs  extendedPhysicsMatrix.mjs  fmm-benchmark-matrix.json  fmm-benchmark-matrix.md  (+73 more)
dev/: dashboard.html
dist-app/: Torus Turbo_0.1.0_aarch64.dmg
docs/: ADAPTIVE_RESOLUTION.md  ADDENDUM_LAB_SCALE_ADAPTIVE_STRICT_ANALYSIS.md  ADDENDUM_TOPOLOGY_FMM_STABILITY_STRICT_ANALYSIS.md  ADDENDUM_VISUALIZATION_PHYSICAL_STRICT_ANALYSIS.md  AUDIT_FILAMENT_DYNAMICS_VORTEX_CASCADE.md  (+45 more)
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  native_render.rs
torus-core/: Cargo.toml
torus-core/crates/torus-bridge/: Cargo.toml
torus-core/crates/torus-bridge/src/: commands.rs  handle.rs  lib.rs
torus-core/crates/torus-fmm/: Cargo.toml
torus-core/crates/torus-fmm/src/: fmm_solver.rs  lib.rs  multipole.rs  octree.rs
torus-core/crates/torus-gpu/: Cargo.toml
torus-core/crates/torus-gpu/src/: gpu_backend.rs  grid.rs  lib.rs  pipeline.rs  renderer.rs
torus-core/crates/torus-gpu/src/shaders/: advect.wgsl  bin_particles.wgsl  clear_counter.wgsl  clear_grid.wgsl  common.wgsl  compact.wgsl  compute_flow.wgsl  confinement.wgsl  diffusion.wgsl  find_merge_target.wgsl  merge_particles.wgsl  particle_render.wgsl  resolve_merge_owner.wgsl  stability.wgsl  stretching.wgsl
torus-core/crates/torus-net/: Cargo.toml
torus-core/crates/torus-net/src/: lib.rs
torus-core/crates/torus-physics/: Cargo.toml
torus-core/crates/torus-physics/src/: advection.rs  biot_savart.rs  compute_backend.rs  gpu_types.rs  lib.rs  params.rs  parity_test.rs  particle.rs  pipeline.rs  pse_diffusion.rs  reconnection.rs  stability.rs  vortex_stretching.rs  vorticity_confinement.rs
(+130 files in other folders)
