[workspace]
resolver = "2"
members = [
    "crates/torus-physics",
    "crates/torus-gpu",
    "crates/torus-fmm",
    "crates/torus-net",
    "crates/torus-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
wgpu = "24"
